# eversoul-ai-chat

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  README.zh-CN.md  package-lock.json  package.json  release_notes.md  vite.config.ts
data/personas/: adrianne.json  aira.json  aki.json  alisha.json  ayame.json  ayame_tsukuyomi.json  beleth.json  bryce.json  canney.json  carnelian.json  casper.json  catherine.json  catherine_radiance.json  cherrie.json  cherrie_romantic.json  chloe.json  claire.json  clara.json  claudia.json  claudia_archangel.json  daphne.json  dominique.json  dora.json  edith.json  eileen.json  erika.json  erusha.json  eve.json  flynn.json  garnet.json  garnet_rapture.json  hanul.json  haru.json  haru_kamuy.json  hazel.json  honglan.json  honglan_peerless.json  ina.json  irene.json  jacqueline.json  (+59 more)
docs/: ARCHITECTURE.en.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md
docs/wiki/: ARCHITECTURE.en.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  FAQ.en.md  FAQ.md  FAQ.zh-CN.md
scripts/: import-spirit-voices.mjs  package-portable.mjs
src/: App.css  App.tsx  api.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  test_compile.rs
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: batch_test.rs  lib.rs  main.rs  test.rs
src-tauri/src/domains/: mod.rs
src-tauri/src/domains/auth/: commands.rs  repositories.rs  services.rs  types.rs
src-tauri/src/domains/chat/: commands.rs  memory.rs  mod.rs  repositories.rs  services.rs  types.rs
src-tauri/src/domains/knowledge/: commands.rs  repositories.rs  services.rs  types.rs
src-tauri/src/domains/llm/: commands.rs  repositories.rs  services.rs  types.rs
src-tauri/src/domains/modules/: commands.rs  mod.rs  services.rs  types.rs
src-tauri/src/domains/persona/: commands.rs  mod.rs  repositories.rs  services.rs  types.rs
src-tauri/src/domains/settings/: commands.rs  services.rs  types.rs
src-tauri/src/domains/style/: commands.rs  repositories.rs  services.rs  types.rs
src-tauri/src/domains/sync/: commands.rs  repositories.rs  services.rs  types.rs
src-tauri/src/domains/training/: commands.rs  services.rs  types.rs
src-tauri/src/domains/voice/: commands.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/compress/: mod.rs
src-tauri/src/infrastructure/database/: mod.rs
src-tauri/src/infrastructure/external_ai/: mod.rs
src-tauri/src/infrastructure/hardware/: mod.rs
src-tauri/src/infrastructure/http/: mod.rs
src-tauri/src/infrastructure/llm/: download.rs  mod.rs  scheduler.rs  streaming.rs  validation.rs  worker.rs
src-tauri/src/infrastructure/settings/: mod.rs
src-tauri/src/infrastructure/training/: config.rs  dataset.rs  downloader.rs  gguf_export.rs  lora.rs  mod.rs  model.rs  trainer.rs
src-tauri/src/infrastructure/tts/: mod.rs
src-tauri/src/infrastructure/updates/: mod.rs
src/domains/auth/: client.ts  index.ts  types.ts
src/domains/chat/: client.ts  index.ts  types.ts
src/domains/evertalk/: backgroundAssets.ts  hooks.ts  i18n.ts  index.ts  logic.ts  types.ts
src/domains/evertalk/components/: AppInfoPanel.tsx  BackgroundGalleryPanel.tsx  ChatStage.tsx  EverTalkApp.css  EverTalkApp.tsx  LanguageGatePanel.tsx  LoadableAssetImage.tsx  ModuleManagementPanel.tsx  PerformanceGatePanel.tsx  ProfileDetailPanel.tsx  SettingsPanel.tsx  SetupProgressPanel.tsx  SetupWizard.tsx  SpiritProfilePanel.tsx  SpiritRoster.tsx  SystemStatusPanel.tsx  WarmupOverlay.tsx
src/domains/knowledge/: client.ts  index.ts  types.ts
src/domains/llm/: client.ts  index.ts  types.ts
src/domains/modules/: client.ts  index.ts  types.ts
src/domains/persona/: client.ts  index.ts  logic.ts  types.ts
src/domains/settings/: client.ts  index.ts  types.ts
src/domains/style/: client.ts  index.ts  types.ts
src/domains/sync/: client.ts  index.ts  types.ts
src/domains/training/: client.ts  index.ts  types.ts
src/domains/voice/: client.ts  index.ts
src/shared/api/: commands.ts  index.ts  invoke.ts
src/shared/types/: index.ts
tools/: build_complete_personas.cjs  pack_personas.cjs  pack_voices.cjs
