[package]
name = "eversoul-ai-chat"
version = "0.0.7"
description = "A Tauri App"
authors = ["GarnetRapture <garnet@everlib.pro>"]
repository = "https://github.com/GarnetRapture/eversoul-ai-chat"
homepage = "https://github.com/GarnetRapture/eversoul-ai-chat"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eversoul_ai_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.103"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
directories = "6.0.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
# CPU 기반 로컬 LLM 추론 (GGUF 포맷)
# Windows 빌드 요구사항: Visual Studio Build Tools (MSVC) + CMake + Clang
# GPU 가속 필요 시 features = ["cuda"] 또는 features = ["vulkan"] 으로 변경
llama-cpp-2 = "0.1"
# 논리 코어(하이퍼스레딩 포함) 대신 물리 코어 수를 기준으로 추론 스레드를 산정하기 위함.
# CPU 추론은 메모리 대역폭 바운드라 논리 코어까지 다 쓰면 캐시/메모리 경합으로 오히려 느려진다.
num_cpus = "1"
futures-util = "0.3.32"
sha2 = "0.11.0"
hex = "0.4.3"
flate2 = "1.0"
# 앱 설정(기본 정령, 활성 스타일 등) 영속화용 INI 파일 리더/라이터
rust-ini = "0.21"

# 정령별 누적 대화 데이터를 이용한 순수 Rust 실제 LoRA 파인튜닝(역전파 기반).
# Python 의존성 없이 HuggingFace 공식 Rust ML 프레임워크(candle)만으로 학습.
# candle-transformers는 사용하지 않고, candle-core/candle-nn 표준 텐서·자동미분 API만으로
# Qwen2 아키텍처(RoPE/GQA/RMSNorm/SwiGLU)와 LoRA 어댑터를 직접 구현한다(내부 비공개 API에
# 의존하지 않기 위함).
candle-core = "0.8"
candle-nn = "0.8"
hf-hub = "0.3"
# esaxx_fast(유니그램 토크나이저용 C++ 의존성 esaxx-rs)는 기본값에서 제외한다.
# esaxx-rs가 정적 CRT(/MT)로 빌드되어 동적 CRT(/MD)로 빌드되는 llama-cpp-sys-2와
# 링크 시 충돌(LNK2038 RuntimeLibrary mismatch)한다. Qwen2는 BPE 토크나이저를
# 쓰므로 유니그램 전용인 esaxx-rs 자체가 애초에 불필요하다.
tokenizers = { version = "0.20", default-features = false, features = ["onig", "progressbar"] }




# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
